--- a/portfolio.html
+++ b/portfolio.html
@@ -14,22 +14,27 @@
 <body>
     <!--Шапка -->
     <header class="header">
+        <div class="conteiner header-conteiner">
         <nav class="header-nav">
-        <a  class="logo link" href="./portfolio.html" lang="en"><span class="web">Web</span><span class="studio-dark">Studio</span></a>
-        <ul class="list">
-            <li><a class="menu-link link" href="./index.html">Студия</a></li>
-            <li><a class="menu-link link current" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="menu-link link" href="#">Контакты</a></li>
+        <a  class="logo link header-logo" href="./portfolio.html" lang="en"><span class="web">Web</span><span class="studio-dark">Studio</span></a>
+        <ul class="list menu-list">
+            <li class="menu-item"><a class="menu-link link" href="./index.html">Студия</a></li>
+            <li class="menu-item"><a class="menu-link link current" href="./portfolio.html">Портфолио</a></li>
+            <li class="menu-item"><a class="menu-link link" href="#">Контакты</a></li>
         </ul>
     </nav>
-    <ul class="list">
-        <li><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="header-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        
+        <div class="header-connect">
+    <ul class="list menu-list">
+        <li class="contact-item"><a class="header-contacts link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="contact-item"><a class="header-contacts link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
+        </div> 
+    </div> 
     </header>
     <!--Содержимое -->
     <main>
-        <section>
+        <section class="menu">
             <ul class="list">
                 <li>
                     <button class="btn-portfolio btn-dark" type="button">Все</button>
