--- a/portfolio.html
+++ b/portfolio.html
@@ -34,26 +34,30 @@
     </header>
     <!--Содержимое -->
     <main>
-        <section class="menu">
-            <ul class="list">
-                <li>
-                    <button class="btn-portfolio btn-dark" type="button">Все</button>
+        <section class="section-portfolio">
+            <div class="conteiner conteiner-portfolio">
+                <div class="conteiner-menu-portfolio menu-portfolio-section">
+            <ul class="list menu-portfolio-list">
+                <li class="menu-portfolio item-menu-portfolio">
+                    <button class="btn-portfolio btn-dark btn-portfolio-hero" type="button">Все</button>
                 </li>
-                <li>
-                    <button class="btn-portfolio btn-dark" type="button">Веб-сайты</button>
+                <li class="menu-portfolio">
+                    <button class="btn-portfolio btn-dark btn-portfolio-hero" type="button">Веб-сайты</button>
                 </li>
-                <li>
-                    <button class="btn-portfolio btn-dark" type="button">Приложения</button>
+                <li class="menu-portfolio">
+                    <button class="btn-portfolio btn-dark btn-portfolio-hero" type="button">Приложения</button>
                 </li>
-                <li>
-                    <button class="btn-portfolio btn-dark" type="button">Дизайн</button>
+                <li class="menu-portfolio">
+                    <button class="btn-portfolio btn-dark btn-portfolio-hero" type="button">Дизайн</button>
                 </li>
-                <li>
-                    <button class="btn-portfolio btn-dark" type="button">Маркетинг</button>
+                <li class="menu-portfolio">
+                    <button class="btn-portfolio btn-dark btn-portfolio-hero" type="button">Маркетинг</button>
                 </li>
             </ul>
-            <ul class="list">
-                <li>
+                </div>
+                <div class="conteiner-portfolio-content">
+            <ul class="list portfolio-content-list">
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-1.jpg"
                 alt="сайт"
@@ -63,7 +67,7 @@
                 <h2 class="title-portfolio">Технокряк</h2>
                 <p class="pre-title-portfolio-text">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-2.jpg"
                 alt="дизайн"
@@ -73,7 +77,7 @@
                 <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="pre-title-portfolio-text">Дизайн</p>
                 </li>
-                <li>
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-3.jpg"
                 alt="приложение"
@@ -83,7 +87,7 @@
                 <h2 class="title-portfolio">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="pre-title-portfolio-text">Приложение</p>
                 </li>
-                <li>
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-4.jpg"
                 alt="маркетинг"
@@ -93,7 +97,7 @@
                 <h2 class="title-portfolio">Проект <span lang="en">Prime</span></h2>
                 <p class="pre-title-portfolio-text">Маркетинг</p>
                 </li>
-                <li>
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-5.jpg"
                 alt="приложение"
@@ -103,7 +107,7 @@
                 <h2 class="title-portfolio">Проект <span lang="en">Boxes</span></h2>
                 <p class="pre-title-portfolio-text">Приложение</p>
                 </li>
-                <li>
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-6.jpg"
                 alt="сайт"
@@ -113,7 +117,7 @@
                 <h2 class="title-portfolio" lang="en">Inspiration has no Borders</h2>
                 <p class="pre-title-portfolio-text">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-7.jpg"
                 alt="дизайн"
@@ -123,7 +127,7 @@
                 <h2 class="title-portfolio">Издание <span lang="en">Limited Edition</span></h2>
                 <p class="pre-title-portfolio-text">Дизайн</p>
                 </li>
-                <li>
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-8.jpg"
                 alt="маркетинг"
@@ -133,7 +137,7 @@
                 <h2 class="title-portfolio">Проект<span lang="en">LAB</span></h2>
                 <p class="pre-title-portfolio-text">Маркетинг</p>
                 </li>
-                <li>
+                <li class="portfolio-content-item">
                     <img
                 src="./images/portfolio-9.jpg"
                 alt="приложение"
@@ -144,18 +148,23 @@
                 <p class="pre-title-portfolio-text">Приложение</p>
                 </li>
             </ul>
+                </div>
+        </div>
         </section>
     </main>
     <footer class="footer">
-        <a class="logo-footer link" href="#" lang="en"> <span class="web">Web</span><span class="studio-light">Studio</span></a>
+        <div class="conteiner footer-conteiner">
+        <a class="logo-footer link footer-logo-link" href="#" lang="en"> <span class="web">Web</span><span class="studio-light">Studio</span></a>
         <address class="address">
-            <ul class="list">
-                <li><a class="footer-address-link link" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <div class="address-footer-list">
+            <ul class="list footer-list">
+                <li class="address-footer-item"><a class="footer-address-link link" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="address-footer-item"><a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-footer-item"><a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
+            </div>
         </address>
-
+        </div>
     </footer>
 </body>
 </html>
