--- a/index.html
+++ b/index.html
@@ -150,11 +150,13 @@
         <div class="conteiner footer-conteiner">
         <a class="logo-footer link footer-logo-link" href="#" lang="en"> <span class="web">Web</span><span class="studio-light">Studio</span></a>
         <address class="address">
+            <div class="address-footer-list">
             <ul class="list footer-list">
-                <li><a class="footer-address-link link" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="address-footer-item"><a class="footer-address-link link" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="address-footer-item"><a class="footer-contacts-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="address-footer-item"><a class="footer-contacts-link link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
+            </div>
         </address>
         </div>
     </footer>
