--- a/portfolio.html
+++ b/portfolio.html
@@ -64,8 +64,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio">Технокряк</h2>
                 <p class="pre-title-portfolio-text">Веб-сайт</p>
+                </div>  
                 </li>
                 <li class="portfolio-content-item">
                     <img
@@ -74,8 +76,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="pre-title-portfolio-text">Дизайн</p>
+                </div>
                 </li>
                 <li class="portfolio-content-item">
                     <img
@@ -84,8 +88,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio">Ресторан <span lang="en">Seafood</span></h2>
-                <p class="pre-title-portfolio-text">Приложение</p>
+                <p class="pre-title-portfolio-text">Приложение</p> 
+                </div>
                 </li>
                 <li class="portfolio-content-item">
                     <img
@@ -94,8 +100,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio">Проект <span lang="en">Prime</span></h2>
                 <p class="pre-title-portfolio-text">Маркетинг</p>
+                </div>
                 </li>
                 <li class="portfolio-content-item">
                     <img
@@ -104,8 +112,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio">Проект <span lang="en">Boxes</span></h2>
                 <p class="pre-title-portfolio-text">Приложение</p>
+                </div>
                 </li>
                 <li class="portfolio-content-item">
                     <img
@@ -114,8 +124,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio" lang="en">Inspiration has no Borders</h2>
                 <p class="pre-title-portfolio-text">Веб-сайт</p>
+                </div>
                 </li>
                 <li class="portfolio-content-item">
                     <img
@@ -124,8 +136,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio">Издание <span lang="en">Limited Edition</span></h2>
                 <p class="pre-title-portfolio-text">Дизайн</p>
+                </div>
                 </li>
                 <li class="portfolio-content-item">
                     <img
@@ -134,8 +148,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio">Проект<span lang="en">LAB</span></h2>
                 <p class="pre-title-portfolio-text">Маркетинг</p>
+                </div>
                 </li>
                 <li class="portfolio-content-item">
                     <img
@@ -144,8 +160,10 @@
                 width="370"
                 height="294"
                 >
+                <div class="portfolio-text">
                 <h2 class="title-portfolio" lang="en">Growing Business</h2>
                 <p class="pre-title-portfolio-text">Приложение</p>
+                </div>
                 </li>
             </ul>
                 </div>
