--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
                 width="270"
                 height="260"
                 >
+                <div class="team-title">
                 <h3 class="title-menu-name">Игорь Демьяненко</h3>
                 <p class="pre-title-name" lang="en">Product Designer</p>
+                </div>
                 </li>
             <li class="team-item">
                 <img
@@ -119,8 +121,10 @@
                 width="270"
                 height="260"
                 >
+                <div class="team-title">
                 <h3 class="title-menu-name">Ольга Репина</h3>
                 <p class="pre-title-name" lang="en">Frontend Developer</p>
+                </div>
             </li>
             <li class="team-item">
                 <img
@@ -129,8 +133,10 @@
                 width="270"
                 height="260"
                 >
+                <div class="team-title">
                 <h3 class="title-menu-name">Николай Тарасов</h3>
                 <p class="pre-title-name" lang="en">Marketing</p>
+                </div>
             </li>
             <li class="team-item">
                 <img
@@ -139,8 +145,10 @@
                 width="270"
                 height="260"
                 >
+                <div class="team-title">
                 <h3 class="title-menu-name">Михаил Ермаков</h3>
                 <p class="pre-title-name" lang="en">UI Designer</p>
+                </div>
             </li>
         </ul>
     </div>
